--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
   },
   "dependencies": {
     "css-loader": "^6.8.1",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.15.5",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
